Implemented RESTFUL API

--- a/WebApplication1/appsettings.Development.json
+++ b/WebApplication1/appsettings.Development.json
@@ -7,5 +7,10 @@
   },
   "ConnectionStrings": {
     "Default": "Server=(localdb)\\mssqllocaldb;Database=ExpenseManager;Trusted_Connection=True;"
+  },
+  "Jwt": {
+    "Issuer": "ExpenseManager",
+    "Audience": "ExpenseManager",
+    "Key": "Ultra-Secret-32-Char-Key-Change-Me!"
   }
 }
