--- a/WebApplication1/ExpenseManager.csproj
+++ b/WebApplication1/ExpenseManager.csproj
@@ -24,4 +24,9 @@
     <PackageReference Include="Scalar.AspNetCore" Version="2.3.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ClientApp\src\components\" />
+    <Folder Include="ClientApp\src\services\" />
+  </ItemGroup>
+
 </Project>
