--- a/WebApplication1/ExpenseManager.csproj
+++ b/WebApplication1/ExpenseManager.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <Folder Include="ClientApp\src\components\" />
+    <Folder Include="ClientApp\src\pages\" />
     <Folder Include="ClientApp\src\services\" />
   </ItemGroup>
 
